--- a/release.yaml
+++ b/release.yaml
@@ -6,12 +6,12 @@ binaries:
   metal-stack:
     cloudctl:
       darwin:
-        url: https://blobstore.fi-ts.io/cloud-native/cloudctl/vv0.7.14/cloudctl-darwin-amd64
+        url: invalid
       linux:
-        url: https://github.com/metal-stack/metalctl/releases/download/vv0.7.14/metalctl-linux-amd64
-      version: v0.7.14
+        url: invalid
+      version: invalid
       windows:
-        url: https://blobstore.fi-ts.io/cloud-native/cloudctl/vv0.7.14/cloudctl-windows-amd64
+        url: invalid
 docker-images:
   metal-stack:
     extensions:
