--- a/release.yaml
+++ b/release.yaml
@@ -89,4 +89,4 @@ repositories:
         url: https://github.com/gardener/gardener.git
 vectors:
   metal-stack:
-    url: https://raw.githubusercontent.com/metal-stack/releases/v0.1.3/release.yaml
+    url: https://raw.githubusercontent.com/metal-stack/releases/v0.1.3-1/release.yaml
