--- a/release.yaml
+++ b/release.yaml
@@ -22,7 +22,7 @@ docker-images:
         name: registry.fi-ts.io/cloud-native/kube-counter
         tag: v0.3.3
       cloud-api:
-        name: registry.fi-ts.io/cloud-native/cloud-api
+        name: r.metal-stack.io/extensions/cloud-api
         tag: v0.14.0
       s3-api:
         name: registry.fi-ts.io/s3/s3-api
