--- a/release.yaml
+++ b/release.yaml
@@ -44,8 +44,8 @@ docker-images:
   third-party:
     control-plane:
       accounting-db:
-        name: postgres
-        tag: 12-alpine
+        name: timescale/timescaledb
+        tag: 2.1.0-pg12
     gardener:
       api-server:
         name: eu.gcr.io/gardener-project/gardener/apiserver
