--- a/release.yaml
+++ b/release.yaml
@@ -25,10 +25,10 @@ docker-images:
         name: r.metal-stack.io/extensions/cloud-api
         tag: v0.15.1
       s3-api:
-        name: registry.fi-ts.io/s3/s3-api
+        name: r.metal-stack.io/extensions/s3-api
         tag: v0.3.0
       s3-controller:
-        name: registry.fi-ts.io/s3/s3-controller
+        name: r.metal-stack.io/extensions/s3-controller
         tag: v0.3.0
     fits:
       authn-webhook:
