--- a/release.yaml
+++ b/release.yaml
@@ -32,10 +32,10 @@ docker-images:
         tag: v0.3.0
     fits:
       authn-webhook:
-        name: registry.fi-ts.io/cloud-native/kubernetes-authn-webhook
+        name: r.metal-stack.io/extensions/kubernetes-authn-webhook
         tag: v0.2.0
       group-role-binding-controller:
-        name: registry.fi-ts.io/cloud-native/group-rolebinding-controller
+        name: r.metal-stack.io/extensions/group-rolebinding-controller
         tag: v0.3.0
     generic:
       backup-restore-sidecar:
