--- a/release.yaml
+++ b/release.yaml
@@ -19,7 +19,7 @@ docker-images:
         name: r.metal-stack.io/extensions/accounting-api
         tag: v0.5.2
       accounting-exporter:
-        name: registry.fi-ts.io/cloud-native/kube-counter
+        name: r.metal-stack.io/extensions/kube-counter
         tag: v0.4.1
       cloud-api:
         name: r.metal-stack.io/extensions/cloud-api
