Fix velero plugin image name.

--- a/release.yaml
+++ b/release.yaml
@@ -91,7 +91,7 @@ docker-images:
         name: velero/velero
         tag: v1.3.2
       velero-plugin-gcp:
-        name: velero-plugin-for-gcp
+        name: velero/velero-plugin-for-gcp
         tag: v1.0.1
 helm-charts:
   postgreslet:
