--- a/release.yaml
+++ b/release.yaml
@@ -37,6 +37,10 @@ docker-images:
       group-role-binding-controller:
         name: r.metal-stack.io/extensions/group-rolebinding-controller
         tag: v0.4.2
+    gardener:
+      gardener-extension-fits-authn:
+        name: ghcr.io/fi-ts/gardener-extension-authn
+        tag: v0.1.1
     generic:
       backup-restore-sidecar:
         name: ghcr.io/metal-stack/backup-restore-sidecar
