--- a/release.yaml
+++ b/release.yaml
@@ -38,6 +38,9 @@ docker-images:
         name: r.metal-stack.io/extensions/group-rolebinding-controller
         tag: v0.4.2
     gardener:
+      gardener-extension-fits-accounting:
+        name: ghcr.io/fi-ts/gardener-extension-accounting
+        tag: v0.1.0
       gardener-extension-fits-authn:
         name: ghcr.io/fi-ts/gardener-extension-authn
         tag: v0.1.3
