--- a/release.yaml
+++ b/release.yaml
@@ -6,12 +6,12 @@ binaries:
   metal-stack:
     cloudctl:
       darwin:
-        url: https://github.com/fi-ts/cloudctl/releases/download/v0.11.13/cloudctl-darwin-amd64
+        url: https://github.com/fi-ts/cloudctl/releases/download/v0.12.0/cloudctl-darwin-amd64
       linux:
-        url: https://github.com/fi-ts/cloudctl/releases/download/v0.11.13/cloudctl-linux-amd64
-      version: v0.11.13
+        url: https://github.com/fi-ts/cloudctl/releases/download/v0.12.0/cloudctl-linux-amd64
+      version: v0.12.0
       windows:
-        url: https://github.com/fi-ts/cloudctl/releases/download/v0.11.13/cloudctl-windows-amd64
+        url: https://github.com/fi-ts/cloudctl/releases/download/v0.12.0/cloudctl-windows-amd64
 docker-images:
   metal-stack:
     extensions:
