--- a/release.yaml
+++ b/release.yaml
@@ -71,4 +71,4 @@ repositories:
       url: https://github.com/fi-ts/postgreslet
 vectors:
   metal-stack:
-    url: https://raw.githubusercontent.com/metal-stack/releases/v0.15.1/release.yaml
+    url: https://raw.githubusercontent.com/metal-stack/releases/v0.15.2-rc.0/release.yaml
