--- a/release.yaml
+++ b/release.yaml
@@ -68,5 +68,5 @@ repositories:
       url: https://github.com/fi-ts/postgreslet
 vectors:
   metal-stack:
-    url: https://raw.githubusercontent.com/metal-stack/releases/v0.18.4/release.yaml
-    version: v0.18.4
+    url: https://raw.githubusercontent.com/metal-stack/releases/v0.18.5-rc.0/release.yaml
+    version: v0.18.5-rc.0
