--- a/release.yaml
+++ b/release.yaml
@@ -68,5 +68,5 @@ repositories:
       url: https://github.com/fi-ts/postgreslet
 vectors:
   metal-stack:
-    url: https://raw.githubusercontent.com/metal-stack/releases/v0.21.10/release.yaml
-    version: v0.21.10
+    url: https://raw.githubusercontent.com/metal-stack/releases/v0.21.11-rc.0/release.yaml
+    version: v0.21.11-rc.0
