--- a/release.yaml
+++ b/release.yaml
@@ -36,9 +36,13 @@ docker-images:
         tag: v0.5.0
     gardener:
       gardener-extension-fits-accounting:
+        charts:
+          extension: ghcr.io/fi-ts/charts/gardener-extension-accounting
         name: ghcr.io/fi-ts/gardener-extension-accounting
         tag: v0.1.6
       gardener-extension-fits-authn:
+        charts:
+          extension: ghcr.io/fi-ts/charts/gardener-extension-authn
         name: ghcr.io/fi-ts/gardener-extension-authn
         tag: v0.1.10
     generic:
