--- a/release.yaml
+++ b/release.yaml
@@ -45,6 +45,11 @@ docker-images:
           extension: ghcr.io/fi-ts/charts/gardener-extension-authn
         name: ghcr.io/fi-ts/gardener-extension-authn
         tag: v0.1.11
+      gardener-extension-fits-xdr:
+        charts:
+          extension: ghcr.io/fi-ts/charts/gardener-extension-xdr
+        name: ghcr.io/fi-ts/gardener-extension-xdr
+        tag: v0.0.0
     generic:
       backup-restore-sidecar:
         name: ghcr.io/metal-stack/backup-restore-sidecar
