--- a/.github/workflows/oci-artifact.yaml
+++ b/.github/workflows/oci-artifact.yaml
@@ -10,6 +10,9 @@ on:
   push:
     branches:
       - master
+    tags-ignore:
+      # this is handled by release publish trigger
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 env:
   REGISTRY: ghcr.io
